# grmi_suitcase

./: CMakeLists.txt  package.xml
cfg/: ps3.config.yaml
launch/: start_camera.launch  start_detector.launch  start_gamepad.launch  start_motors.launch
scripts/: motors_control.py  person_detector.py  visual_control.py
